--- a/part3/package.json
+++ b/part3/package.json
@@ -1,6 +1,9 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "test": "echidna . --contract EchidnaTest --config contracts/crytic/config.yaml"
+  },
   "devDependencies": {
-    "hardhat": "^2.12.2"
+    "hardhat": "^2.14.0"
   }
 }
